--- a/css/page-individual.css
+++ b/css/page-individual.css
@@ -93,7 +93,7 @@ tbody {
 }
 
 .partNum {
-    width: 100px;
+    width: 125px;
 }
 
 .partName {
